typeracer game done in future cache may be implemented
